--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -67,10 +67,12 @@
             android:id="@+id/editTextPassword1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:fontFamily="@font/nanumsquareneoregular"
             android:hint="비밀번호를 입력하세요"
             android:padding="16dp"
             tools:ignore="HardcodedText" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,6 +83,7 @@
                 android:id="@+id/editTextPassword2"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:inputType="textPassword"
                 android:fontFamily="@font/nanumsquareneoregular"
                 android:hint="한 번 더 입력하세요"
                 android:padding="16dp"
