--- a/app/src/main/res/layout/frag4.xml
+++ b/app/src/main/res/layout/frag4.xml
@@ -77,7 +77,9 @@
             android:layout_marginBottom="8dp"
             android:src="@drawable/ic_edit"
             app:backgroundTint="#87B9DF"
-            app:tint="@null" />
+            app:tint="@null"
+            android:contentDescription="글쓰기"
+            tools:ignore="HardcodedText" />
 
     </RelativeLayout>
 
