--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,9 +17,9 @@
             <EditText
                 android:id="@+id/et_id"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="56dp"
+                android:layout_marginTop="16dp"
                 android:hint="아이디"
                 android:inputType="text"
                 android:textSize="20sp"
@@ -31,42 +31,43 @@
                 android:id="@+id/btn_doubleCheck"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:text="중복확인"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/et_id"
-                app:layout_constraintTop_toTopOf="@+id/et_id"
-                android:layout_marginStart="8dp" />
+                app:layout_constraintTop_toTopOf="@+id/et_id" />
 
             <EditText
                 android:id="@+id/et_pass"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:hint="비밀번호"
                 android:inputType="text"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/et_id"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/et_id"
                 app:layout_constraintTop_toBottomOf="@+id/et_id" />
 
             <EditText
                 android:id="@+id/et_pass2"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:hint="비밀번호 확인"
                 android:inputType="textPassword"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/et_id"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/et_pass"
                 app:layout_constraintTop_toBottomOf="@+id/et_pass" />
 
             <EditText
                 android:id="@+id/et_name"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:hint="이름"
                 android:inputType="text"
                 android:textSize="20sp"
@@ -78,8 +79,8 @@
             <EditText
                 android:id="@+id/et_nickname"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="48dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:hint="닉네임"
                 android:inputType="text"
                 android:textSize="20sp"
@@ -92,17 +93,17 @@
                 android:id="@+id/btn_doubleCheck2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:text="중복확인"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/et_nickname"
-                app:layout_constraintTop_toTopOf="@+id/et_nickname"
-                android:layout_marginStart="8dp" />
+                app:layout_constraintTop_toTopOf="@+id/et_nickname" />
 
             <EditText
                 android:id="@+id/et_phone"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:hint="전화번호"
                 android:inputType="text"
                 android:textSize="20sp"
@@ -114,8 +115,8 @@
             <EditText
                 android:id="@+id/et_address"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:hint="주소"
                 android:inputType="text"
                 android:textSize="20sp"
@@ -123,6 +124,31 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/et_phone"
                 app:layout_constraintTop_toBottomOf="@+id/et_phone" />
+
+            <EditText
+                android:id="@+id/et_passHint"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:hint="비밀번호 힌트 답 입력"
+                android:inputType="text"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="@+id/sp_passHint"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/sp_passHint"
+                app:layout_constraintTop_toBottomOf="@+id/sp_passHint" />
+
+            <Spinner
+                android:id="@+id/sp_passHint"
+                android:layout_width="0dp"
+                android:layout_height="49dp"
+                android:layout_below="@id/et_address"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/nanumsquareneoregular"
+                app:layout_constraintEnd_toEndOf="@+id/et_address"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/et_address"
+                app:layout_constraintTop_toBottomOf="@+id/et_address" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
