--- a/app/src/main/res/layout/frag3.xml
+++ b/app/src/main/res/layout/frag3.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Save from"
+            android:text="ⓈⒶⓋⒺ ⒻⓇⓄⓂ"
             android:textSize="30sp"
             app:titleTextAppearance="@font/nanumsquareneobold"
             app:titleTextColor="@color/black" />
@@ -62,7 +62,7 @@
             android:layout_height="103dp"
             android:layout_marginBottom="204dp"
             android:background="#0000BCD4"
-            android:text="\n[금주의 인기게시물]\n 제목: 한이음\n내용: AI도 먹잘알\n작성자: 경아유혜림류민서킴"
+            android:text="\n  [금주의 인기게시물]\n  제목: 고구마랑 김치\n  내용: 저번에 고구마 나눔을 받았는데 너무 맛있어요 흑흑\n  작성자: 가문의영광굴비"
             android:fontFamily="@font/nanumsquareneoregular"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -79,7 +79,7 @@
         android:drawableTint="#131313"
         android:fontFamily="@font/nanumsquareneoregular"
         android:gravity="center"
-        android:text="이달의 나눔왕"
+        android:text="♚  이달의 나눔왕  ♚"
         android:textColor="#131313"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -201,7 +201,7 @@
         android:fontFamily="@font/nanumsquareneoregular"
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
-        android:text=" ※공지사항※  한이음 프로젝트 화이팅♥ 한이음은 왜 한이음일까 가나다라마바사 에헤이"
+        android:text=" ※공지사항※  나눔되는 음식의 유통기한을 꼭 참고하시기 바랍니다."
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="20sp" />
 
@@ -217,44 +217,42 @@
         <TextView
             android:id="@+id/textView3"
             android:layout_width="213dp"
-            android:layout_height="53dp"
+            android:layout_height="0dp"
             android:layout_marginTop="50dp"
-            android:layout_marginBottom="184dp"
+            android:layout_marginBottom="11dp"
             android:fontFamily="@font/nanumsquareneoregular"
             android:text="공유냉장고란?"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textSize="34sp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView4"
+            app:layout_constraintBottom_toTopOf="@+id/textView5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="276dp"
-            android:layout_height="114dp"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="38dp"
-            android:layout_marginBottom="158dp"
-            android:text="공유냉장고는 누구나 자유롭게 음식을 채우거나 가져갈 수 있는 냉장고입니다. 음식과 식재료를 넣어두면 필요한 사람은 무료로 가져갈 수 있어요. 공유냉장고를 이용하면 버려지는 음식을 줄이고, 취약계층에게도 도움이 된답니다."
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="284dp"
             android:fontFamily="@font/nanumsquareneoregular"
+            android:text=" 공유냉장고는 누구나 자유롭게 음식을 채우거나 가져갈 수 있는 냉장고입니다.\n\n 음식과 식재료를 넣어두면 필요한 사람은 무료로 가져갈 수 있어요.\n\n 공유냉장고를 이용하면 버려지는 음식을 줄이고, 취약계층에게도 도움이 된답니다."
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.75"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
-            app:layout_constraintVertical_bias="0.073" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="31dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="@+id/textView5"
+            app:layout_constraintHorizontal_bias="0.48"
+            app:layout_constraintStart_toStartOf="@+id/textView5"
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
             app:srcCompat="@drawable/refrigerator" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
