--- a/app/src/main/res/layout/frag4.xml
+++ b/app/src/main/res/layout/frag4.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save from"
+            android:text="ⓈⒶⓋⒺ ⒻⓇⓄⓂ"
             app:titleTextColor="@color/black"
             app:titleTextAppearance="@font/nanumsquareneobold"
             android:layout_gravity="center"
